[package]
name = "pca9555"
description = "A rust-embedded driver for the (P|T)CA9555 i/o port expander"
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/pca9555"
authors = ["Chris Maniewski"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AtoVproject/pca9555"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embassy-sync = "0.5"
seq-macro = "0.3"

[dev-dependencies]
embedded-hal-mock = { git = "https://github.com/asasine/embedded-hal-mock.git", branch = "feat/asasine/async-i2c", features = ["eh1", "embedded-hal-async"] }
tokio = { version = "1.37", features = ["full"] }
critical-section = { version = "1.1", features = ["std"] }
